dark mode fix

--- a/src/components/news/styles/news.css
+++ b/src/components/news/styles/news.css
@@ -95,6 +95,12 @@ footer.newsletter-footer {
   color: #fff;
 }
 
+.btn-dark:hover {
+  background: #fff !important;
+  color: #102c41 !important;
+  border: 1px solid #102c41 !important;
+}
+
 .newsletter-sec .text {
   font-size: 20px;
 }
